--- a/lib/label_real_time_web/live/images_live.html.heex
+++ b/lib/label_real_time_web/live/images_live.html.heex
@@ -1,4 +1,4 @@
-<h1>What's On Your Desk?</h1>
+<h1>Upload Image Sets</h1>
 <div id="upload-images">
   <.form for={@form} phx-submit="save" phx-change="validate">
     <.input field={@form[:name]} placeholder="Image Set Name" />
