Added live links between live views
Added live <.link></.link> between images and labelling live views

--- a/lib/label_real_time_web/live/images_live.html.heex
+++ b/lib/label_real_time_web/live/images_live.html.heex
@@ -41,6 +41,11 @@
     </.button>
   </.form>
 
+  <.link  navigate={~p"/labelling"} >
+    <div class="link-button">Start Labelling -&gt</div>
+  </.link>
+  
+
   <div id="images" phx-update="stream">
     <div :for={{dom_id, image} <- @streams.images} id={dom_id}>
       <div
