--- a/lib/label_real_time_web/live/labelling_live.html.heex
+++ b/lib/label_real_time_web/live/labelling_live.html.heex
@@ -1,4 +1,8 @@
-<h1>Browse Images and Start Labelling</h1>
+<h1>Browse Images and Start Labelling or</h1>
+<.link navigate={~p"/images"}>
+  <div class="link-button">&lt- Back to Upload</div>
+</.link>
+
 <div id="labelling" phx-window-keyup="update">
   <div class="legend">
     k = loop/pause, &larr; = previous, &rarr; = next
