--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -41,6 +41,10 @@ h2 {
 h3 {
     @apply text-center text-slate-800 font-bold text-xl;
 }
+.link-button {
+    @apply flex justify-center mt-4 w-full py-2 px-4 border border-transparent font-medium rounded-md text-white bg-pink-600 transition duration-150 ease-in-out hover:bg-pink-500 active:bg-pink-700 focus:outline-none focus:border-pink-700 focus:ring focus:ring-pink-300;
+
+}
 
 /* Labelling */
 
