--- a/lib/label_real_time_web/live/labelling_live.html.heex
+++ b/lib/label_real_time_web/live/labelling_live.html.heex
@@ -1,12 +1,14 @@
 <h3>Current user: <%= @current_user.email %></h3>
 <h1>Browse Images and Start Labelling or</h1>
+<pre>
+  <%= inspect(@users, pretty: true) %>
+</pre>
 
 <.link navigate={~p"/images"}>
   <div class="link-button"><.icon name="hero-arrow-left-circle" /> Back to Upload</div>
 </.link>
 
 <br />
-
 <div id="labelling" phx-window-keyup="update">
   <div class="legend">
     k = loop/pause, &larr; = previous, &rarr; = next
@@ -28,23 +30,25 @@
 </div>
 
 <ul class="list-none" id="cursors" phx-hook="TrackClientCursor">
-  <li
-    style={"color: deeppink; left: #{@x}%; top: #{@y}%"}
-    class="flex flex-col absolute pointer-events-none whitespace-nowrap overflow-hidden"
-  >
-    <svg
-      version="1.1"
-      width="25px"
-      height="25px"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink"
-      viewBox="0 0 21 21"
+  <%= for user <- @users do %>
+    <li
+      style={"color: deeppink; left: #{user.x}%; top: #{user.y}%"}
+      class="flex flex-col absolute pointer-events-none whitespace-nowrap overflow-hidden"
     >
-      <polygon fill="black" points="8.2,20.9 8.2,4.9 19.8,16.5 13,16.5 12.6,16.6" />
-      <polygon fill="currentColor" points="9.2,7.3 9.2,18.5 12.2,15.6 12.6,15.5 17.4,15.5" />
-    </svg>
-    <span style={"background-color: deeppink;"} class="mt-1 ml-4 px-1 text-sm text-white w-fit">
-      <%= @user %>
-    </span>
-  </li>
+      <svg
+        version="1.1"
+        width="25px"
+        height="25px"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 0 21 21"
+      >
+        <polygon fill="black" points="8.2,20.9 8.2,4.9 19.8,16.5 13,16.5 12.6,16.6" />
+        <polygon fill="currentColor" points="9.2,7.3 9.2,18.5 12.2,15.6 12.6,15.5 17.4,15.5" />
+      </svg>
+      <span style="background-color: deeppink;" class="mt-1 ml-4 px-1 text-sm text-white w-fit">
+        <%= user.name %>
+      </span>
+    </li>
+  <% end %>
 </ul>
