--- a/lib/label_real_time_web/live/labelling_live.html.heex
+++ b/lib/label_real_time_web/live/labelling_live.html.heex
@@ -32,7 +32,7 @@
 <ul class="list-none" id="cursors" phx-hook="TrackClientCursor">
   <%= for user <- @users do %>
     <li
-      style={"color: deeppink; left: #{user.x}%; top: #{user.y}%"}
+      style={"color: #{user.color}; left: #{user.x}%; top: #{user.y}%"}
       class="flex flex-col absolute pointer-events-none whitespace-nowrap overflow-hidden"
     >
       <svg
@@ -46,7 +46,7 @@
         <polygon fill="black" points="8.2,20.9 8.2,4.9 19.8,16.5 13,16.5 12.6,16.6" />
         <polygon fill="currentColor" points="9.2,7.3 9.2,18.5 12.2,15.6 12.6,15.5 17.4,15.5" />
       </svg>
-      <span style="background-color: deeppink;" class="mt-1 ml-4 px-1 text-sm text-white w-fit">
+      <span style={"background-color: #{user.color};"} class="mt-1 ml-4 px-1 text-sm text-white w-fit">
         <%= user.name %>
       </span>
     </li>
