--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,6 +46,11 @@ h3 {
 
 }
 
+.success-button {
+    @apply flex justify-center mt-4 w-full py-2 px-4 border border-transparent font-medium rounded-md text-white bg-green-600 transition duration-150 ease-in-out ;
+
+}
+
 /* Labelling */
 
 #labelling {
