--- a/lib/label_real_time_web/live/images_live.html.heex
+++ b/lib/label_real_time_web/live/images_live.html.heex
@@ -6,8 +6,9 @@
     <.input field={@form[:name]} placeholder="Image Set Name" />
 
     <div class="hint">
-      Add up to <%= @uploads.photos.max_entries %> photos
-      (max <%= trunc(@uploads.photos.max_file_size / 1_000_000) %> MB each)
+      Add up to <%= @uploads.photos.max_entries %> images
+      (max <%= trunc(@uploads.photos.max_file_size / 1_000_000) %> MB each),
+      image size 225 &times 225 px
     </div>
 
     <div class="drop" phx-drop-target={@uploads.photos.ref}>
@@ -46,7 +47,10 @@
   <br />
 
   <.link navigate={~p"/labelling"}>
-    <div class="link-button">Start Labelling <.icon name="hero-arrow-right-circle" /></div>
+    <div class="link-button">
+      Start Labelling (there must be at least one image in the database)
+      <.icon name="hero-arrow-right-circle" />
+    </div>
   </.link>
 
   <div id="images" phx-update="stream">
