--- a/lib/label_real_time_web/live/labelling_live.html.heex
+++ b/lib/label_real_time_web/live/labelling_live.html.heex
@@ -35,7 +35,7 @@
 
 <div id="labelling" phx-window-keyup="update">
   <div class="legend">
-    k = loop/pause, &larr; = previous, &rarr; = next
+    k = loop/pause, &larr; = previous, &rarr; = next; Message other users your image number
   </div>
 
   <svg
